working layout without fixed header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   		<title>Genetic Algorythms</title>
  	 </head>
 
-<body>
+<body class= "bodyContainer" class="works_on_smartphone">
 
 	<header class = "headBox">
 					<nav>
@@ -21,7 +21,7 @@
 					</nav>
 	</header>
 
-	<main class="container">
+	<main class="mainContainer">
 		<article class = "articleBox">
 					<header>
 								<h1>Genetic Algorythm</h1>
