--- a/index.html
+++ b/index.html
@@ -2,30 +2,29 @@
 
 <html>
 
-  	<head>
+	<head>
   		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  		<link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet">
+  		<!-- <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet"> -->
   		<link rel="stylesheet" type="text/css" href="styles.css">
   		<title>Genetic Algorythms</title>
- 	 </head>
+ 	</head>
 
 <body class= "bodyContainer" class="works_on_smartphone">
 
 	<header class = "headBox">
-					<nav>
-						<ul>
-							<li><a href="About.html">About</a></li>
-							<li><a href="Game.html">Game</a></li>
-							<li><a href="Contact.html">Contact</a></li>
-						</ul>
-					</nav>
+		<ul class="ulBox">
+			<li class="liFlex"><a href="About.html">About</a></li>
+			<li class="liFlex"><a href="Game.html">Code</a></li>
+			<li class="liFlex"><a href="Contact.html">Game</a></li>
+		</ul>
 	</header>
-
+	
 	<main class="mainContainer">
 		<article class = "articleBox">
+
 					<header>
-								<h1>Genetic Algorythm</h1>
-								<h2>a toy project</h2>
+					<h1>Genetic Algorythm</h1>
+					<h2>a toy project</h2>
 					</header>
 							
 					<p>Genetic algorithms are inspired by nature and evolution, which is seriously cool to me. It’s no surprise, either, that artificial neural networks (“NN”) are also modeled from biology: evolution is the best general-purpose learning algorithm we’ve experienced, and the brain is the best general-purpose problem solver we know. These are two very important pieces of our biological existence, and also two rapidly growing fields of artificial intelligence and machine learning study. While I’m tempted to talk more about the distinction I make between the GA’s “learning algorithm” and the NN’s “problem solver” terminology, we’ll drop the topic of NNs altogether and concentrate on GAs… for now.</p>
@@ -78,6 +77,7 @@
 
 					<p>The population is a group of chromosomes. The population generally remains the same size but will typically evolve to better average cost scores over time. You get to choose your population size. I picked 20 for mine below, but you could choose 10 or 100 or 10,000 if you want. There are advantages and disadvantages</p>	
 		</article>
+
 
 		<aside class = "sideBox">
 				<h2>Side Box</h2>
