--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
 	<header class = "headBox">
 		<ul class="ulBox">
-			<li class="liFlex"><a href="About.html">About</a></li>
+			<li class="liFlex"><a href="About.html">Home</a></li>
 			<li class="liFlex"><a href="Game.html">Code</a></li>
 			<li class="liFlex"><a href="Contact.html">Game</a></li>
+			<li class="liFlex"><a href="Contact.html">About</a></li>
 		</ul>
 	</header>
-	
+
 	<main class="mainContainer">
 		<article class = "articleBox">
 
