--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 	<header class = "headBox">
 		<ul class="ulBox">
-			<li class="liFlex"><a href="About.html">Home</a></li>
-			<li class="liFlex"><a href="Game.html">Code</a></li>
-			<li class="liFlex"><a href="Contact.html">Game</a></li>
-			<li class="liFlex"><a href="Contact.html">About</a></li>
+			<li class="liFlex"><a href="index.html">Home</a></li>
+			<li class="liFlex"><a href="code.html">Code</a></li>
+			<li class="liFlex"><a href="game.html">Game</a></li>
+			<li class="liFlex"><a href="about.html">About</a></li>
 		</ul>
 	</header>
 
