--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class= "bodyContainer" class="works_on_smartphone">
 
 	<header class = "headBox">
+		<!-- <p>Genetic Algorythm</p> -->
 		<ul class="ulBox">
 			<li class="liFlex"><a href="index.html">Home</a></li>
 			<li class="liFlex"><a href="code.html">Code</a></li>
