--- a/index.html
+++ b/index.html
@@ -96,5 +96,11 @@
 	</footer>
 
 </body>
+<!-- script for the widget to show social stuff-->
+<script>
+  (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+    t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+  })(window, document, '_gscq','script','//widgets.getsitecontrol.com/28662/script.js');
+</script>
 
 </html>
