--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   		<!-- <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet"> -->
   		<link rel="stylesheet" type="text/css" href="styles.css">
+  		<script src="behavior.js"></script>
   		<title>Genetic Algorythms</title>
  	</head>
 
@@ -23,10 +24,9 @@
 	<main class="mainContainer">
 		<article class = "articleBox">
 					<header>
-					<h1>Siavash Fahimi</h1>
+						<h1>Siavash Fahimi</h1>
 					</header>
-							
-					<p>Some stuff about me</p>
+					<p>Some stuff about me</p>	
 		</article>
 	</main>
 
@@ -37,7 +37,6 @@
 	  			<img src="https://www.holbertonschool.com/holberton-logo.png" height="42" width="100">
 		</p>
 	</footer>
-
 </body>
 
 <!-- script for the widget to show social stuff-->
