--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
   		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   		<!-- <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet"> -->
   		<link rel="stylesheet" type="text/css" href="styles.css">
+  		<script src="behavior.js"></script>
   		<title>Genetic Algorythms</title>
  	</head>
 
