--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class= "bodyContainer" class="works_on_smartphone">
 
 	<header class = "headBox">
-		<!-- <p>Genetic Algorythm</p> -->
+		<h1 id="title">Machine Learning</h1>
 		<ul class="ulBox">
 			<li class="liFlex"><a href="index.html">Home</a></li>
 			<li class="liFlex"><a href="code.html">Code</a></li>
@@ -26,10 +26,8 @@
 		<article class = "articleBox">
 
 					<header>
-
-					<h1>Genetic Algorythm</h1>
-					<h2>a toy project</h2>
-					<img src="http://goo.gl/eM5iFJ" class="small" id="smart_thumbnail">
+					<h2>Genetic Algorithm</h2>
+					<img src="http://goo.gl/eM5iFJ" class="" id="smart_thumbnail"> <!-- I set the initial value of class for this img tag to "" so at first it shows the full image which looks kind of nicer to the webpage -->
 					</header>
 							
 					<p>Genetic algorithms are inspired by nature and evolution, which is seriously cool to me. It’s no surprise, either, that artificial neural networks (“NN”) are also modeled from biology: evolution is the best general-purpose learning algorithm we’ve experienced, and the brain is the best general-purpose problem solver we know. These are two very important pieces of our biological existence, and also two rapidly growing fields of artificial intelligence and machine learning study. While I’m tempted to talk more about the distinction I make between the GA’s “learning algorithm” and the NN’s “problem solver” terminology, we’ll drop the topic of NNs altogether and concentrate on GAs… for now.</p>
