--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
   		<!-- <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet"> -->
   		<link rel="stylesheet" type="text/css" href="styles.css">
   		<script src="behavior.js"></script>
+  		<script type="text/javascript" src="evolve.js"></script>
   		<title>Genetic Algorythms</title>
  	</head>
 
