--- a/about.html
+++ b/about.html
@@ -28,6 +28,31 @@
 					</header>
 					<p>Some stuff about me</p>	
 		</article>
+
+		<aside class = "sideBox">
+				<div id="disqus_thread"></div>
+				<script>
+					/**
+					* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+					* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+					*/
+					/*
+					var disqus_config = function () {
+					this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+					this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+					};
+					*/
+					(function() { // DON'T EDIT BELOW THIS LINE
+					var d = document, s = d.createElement('script');
+
+					s.src = '//smartrobot.disqus.com/embed.js';
+
+					s.setAttribute('data-timestamp', +new Date());
+					(d.head || d.body).appendChild(s);
+					})();
+				</script>
+				<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+		</aside>
 	</main>
 
 	<footer class = "footBox">
@@ -37,6 +62,7 @@
 	  			<img src="https://www.holbertonschool.com/holberton-logo.png" height="42" width="100">
 		</p>
 	</footer>
+
 </body>
 
 <!-- script for the widget to show social stuff-->
