--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<header class = "headBox">
 		<h1 id="title">Machine Learning</h1>
 		<ul class="ulBox">
-			<li class="liFlex"><a href="index.html">Home</a></li>
+			<li class="liFlex"><a href="index.html">Algorithm</a></li>
 			<li class="liFlex"><a href="code.html">Code</a></li>
-			<li class="liFlex"><a href="game.html">Game</a></li>
-			<li class="liFlex"><a href="about.html">About</a></li>
+			<li class="liFlex"><a href="simulator.html">Simulator</a></li>
+<!-- 		<li class="liFlex"><a href="about.html">About</a></li> -->
 		</ul>
 	</header>
 
