--- a/code.html
+++ b/code.html
@@ -13,11 +13,12 @@
 <body class= "bodyContainer" class="works_on_smartphone">
 
 	<header class = "headBox">
-		<ul class="ulBoxAbout">
-			<li class="liFlex1"><a href="index.html">Home</a></li>
-			<li class="liFlex1"><a href="code.html">Code</a></li>
-			<li class="liFlex1"><a href="game.html">Game</a></li>
-			<li class="liFlex1"><a href="about.html">About</a></li>
+		<h1 id="title">Machine Learning</h1>
+		<ul class="ulBox">
+			<li class="liFlex"><a href="index.html">Algorithm</a></li>
+			<li class="liFlex"><a href="code.html">Code</a></li>
+			<li class="liFlex"><a href="simulator.html">Simulator</a></li>
+<!-- 		<li class="liFlex"><a href="about.html">About</a></li> -->
 		</ul>
 	</header>
 
