--- a/simulator.html
+++ b/simulator.html
@@ -7,6 +7,7 @@
   		<!-- <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet"> -->
   		<link rel="stylesheet" type="text/css" href="styles.css">
   		<script src="behavior.js"></script>
+  		<script type="text/javascript" src="evolve.js"></script>
   		<title>Genetic Algorythms</title>
  	</head>
 
@@ -23,11 +24,10 @@
 
 	<main class="mainContainer">
 		<article class = "articleBox">
-					<header>
-					<h1>Genetic Code in js</h1>
-					</header>
-							
-					<p>Deep dive in the code for GA.</p>
+			<header>
+				<h1>This page suppose to be completely different</h1>
+			</header>
+			<p>Some cool shit gonna take place in this page.</p>
 		</article>
 
 		<aside class = "sideBox">
