minor styling changes

--- a/simulator.html
+++ b/simulator.html
@@ -11,7 +11,7 @@
   		<title>Genetic Algorythms</title>
  	</head>
 
-<body class= "bodyContainer" class="works_on_smartphone">
+<body class= "bodyContainer" id="sim" class="works_on_smartphone">
 
 	<header class = "headBox">
 		<h1 id="title">Machine Learning</h1>
@@ -30,7 +30,7 @@
 			<p>Some cool shit gonna take place in this page.</p>
 		</article>
 
-		<aside class = "sideBox">
+		<aside id="simSide" class = "sideBox">
 			<div id="disqus_thread"></div>
 			<script>
 				/**
