--- a/code.html
+++ b/code.html
@@ -13,7 +13,7 @@
 <body class= "bodyContainer" class="works_on_smartphone">
 
 	<header class = "headBox">
-		<h1 id="title">Machine Learning</h1>
+		<h1 id="title">genetic<br>algorithm</h1>
 		<ul class="ulBox">
 			<li class="liFlex"><a href="index.html">Algorithm</a></li>
 			<li class="liFlex"><a href="code.html">Code</a></li>
