--- a/sim.html
+++ b/sim.html
@@ -7,6 +7,7 @@
   		<link rel="stylesheet" type="text/css" href="styles.css">
   		<link rel="shortcut icon" href="favicon.ico" >
   		<script src="behavior.js"></script>
+  		<script src="evolve.js"></script>
   		<title>GA</title>
  	</head>
 
@@ -25,12 +26,12 @@
 		<main class="mainContainer">
 			<article class = "articleBox">
 				<header>
-					<h3 id="articleTitle">Genetic Algorithm in JavaScript</h3>
+					<h3 id="articleTitle">Sit tight! Some cool stuff is going to happen here :)</h3>
 					<img src="http://goo.gl/eM5iFJ" class="small" id="smart_thumbnail" height="80%" width="80%"> 
 				</header>
 				
 				<div id="content">		
-					<p>In this section I will explain how I wrote the genetic algorithm in javascript and I will share the code for the algorithm :) </p>
+					<p>Open javascript console on your browser to see the result of this GA.</p>
 
 
 					<h3></h3>
