--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<article class = "articleBox">
 				<header>
 					<h3 id="articleTitle">Natural Selection in Machine Learning</h3>
-					<img src="http://goo.gl/eM5iFJ" class="small" id="smart_thumbnail" height="80%" width="80%"> 
+					<img src="http://goo.gl/eM5iFJ" class="" id="smart_thumbnail" height="80%" width="80%"> 
 				</header>
 				
 				<div id="content">		
@@ -85,19 +85,19 @@
 			</article>
 
 			<aside class = "sideBox">
-					<div id="disqus_thread">
-						<script>
-							(function() { // DON'T EDIT BELOW THIS LINE
-							var d = document, s = d.createElement('script');
+				<div id="disqus_thread">
+					<script>
+						(function() { // DON'T EDIT BELOW THIS LINE
+						var d = document, s = d.createElement('script');
 
-							s.src = '//smartrobot.disqus.com/embed.js';
+						s.src = '//smartrobot.disqus.com/embed.js';
 
-							s.setAttribute('data-timestamp', +new Date());
-							(d.head || d.body).appendChild(s);
-							})();
-						</script>
-						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-					</div>
+						s.setAttribute('data-timestamp', +new Date());
+						(d.head || d.body).appendChild(s);
+						})();
+					</script>
+					<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+				</div>
 			</aside>
 		</main>
 
