styling for sim page

--- a/sim.html
+++ b/sim.html
@@ -46,11 +46,11 @@
 				<div id="genNumCost">
 
 					<div>
-						<p>Number of generations:</p><p id="numOfGen"></p>
+						<p>Number of generations:</p><p id="numOfGen">0</p>
 					</div>
 
 					<div id="costDiv">
-						<p>Cost value:</p> <p id="cost"></p>
+						<p>Cost value:</p> <p id="cost">infinity</p>
 					</div>
 
 				</div>
