styling for sim page

--- a/code.html
+++ b/code.html
@@ -19,7 +19,11 @@
 					<li class="liFlex"><a href="code.html">Code</a></li>
 					<li class="liFlex"><a href="sim.html">Simulator</a></li>
 				</ul></div>
-			<div class="imageBox"><img src="RoboHead.png" alt="Smiley face" height="110" width="130"></div>
+			<div class="imageBox">
+				<a href="https://goo.gl/YcqU94">
+  				<img src="RoboHead.png" alt="Smiley face" height="110" width="130">
+				</a>
+			</div>
 		</header>
 
 		<main class="mainContainer">
