--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<head>
   		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   		<link rel="stylesheet" type="text/css" href="styles.css">
-  		<link rel="shortcut icon" href="favicon.ico" >
+			<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+			<link rel="icon" href="/favicon.ico" type="image/x-icon">
   		<script src="behavior.js"></script>
   		<title>GA</title>
  	</head>
@@ -18,18 +19,22 @@
 					<li class="liFlex"><a href="index.html">Home</a></li>
 					<li class="liFlex"><a href="code.html">Code</a></li>
 					<li class="liFlex"><a href="sim.html">Simulator</a></li>
-				</ul></div>	
-			<div class="imageBox"><img src="RoboHead.png" alt="Smiley face" height="110" width="130"></div>
+				</ul></div>
+			<div class="imageBox">
+				<a href="https://goo.gl/YcqU94">
+  				<img src="RoboHead.png" alt="Smiley face" height="110" width="130">
+				</a>
+			</div>
 		</header>
 
 		<main class="mainContainer">
 			<article class = "articleBox">
 				<header>
 					<h3 id="articleTitle">Natural Selection in Machine Learning</h3>
-					<img src="http://goo.gl/eM5iFJ" class="" id="smart_thumbnail" height="80%" width="80%"> 
+					<img src="http://goo.gl/eM5iFJ" class="" id="smart_thumbnail" height="80%" width="80%">
 				</header>
-				
-				<div id="content">		
+
+				<div id="content">
 					<p>Genetic algorithms are inspired by nature and evolution, which is seriously cool to me. It’s no surprise, either, that artificial neural networks (“NN”) are also modeled from biology: evolution is the best general-purpose learning algorithm we’ve experienced, and the brain is the best general-purpose problem solver we know. These are two very important pieces of our biological existence, and also two rapidly growing fields of artificial intelligence and machine learning study. While I’m tempted to talk more about the distinction I make between the GA’s “learning algorithm” and the NN’s “problem solver” terminology, we’ll drop the topic of NNs altogether and concentrate on GAs… for now.</p>
 
 
@@ -41,7 +46,7 @@
 					<h3>The Chromosome</h3>
 
 					<p>The chromosome is a representation of a solution candidate. In our case, the chromosome itself is a string. Let’s assume that all chromosomes have a length of 13 characters (the same as “Hello, World!”). Here are some possible chromosomes that could be solution candidates for our problem:</p>
-							
+
 					<ul>
 						<li>Gekmo+ xosmd!</li>
 						<li>Gekln, worle”</li>
@@ -81,7 +86,7 @@
 					<h3>The Population</h3>
 
 					<p id="lastP">The population is a group of chromosomes. The population generally remains the same size but will typically evolve to better average cost scores over time. You get to choose your population size. I picked 20 for mine below, but you could choose 10 or 100 or 10,000 if you want. There are advantages and disadvantages</p>
-				</div>	
+				</div>
 			</article>
 
 			<aside class = "sideBox">
@@ -103,7 +108,7 @@
 
 		<footer class = "footBox">
 			<p>
-		  			Made by <a href="https://twitter.com/SiaFahim" target="_blank">Siavash Fahimi</a> for 
+		  			Made by <a href="https://twitter.com/SiaFahim" target="_blank">Siavash Fahimi</a> for
 		  			<a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.
 		  			<img src="https://www.holbertonschool.com/holberton-logo.png" height="42" width="100">
 			</p>
