--- a/index.html
+++ b/index.html
@@ -146,6 +146,19 @@
 					</script>
 					<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 				</div>
+				<div id="tweetBox">
+					<a class="twitter-timeline" href="https://twitter.com/SiaFahim" data-widget-id="664535240019349505">Tweets by @SiaFahim</a>
+					<script>
+						!function(d,s,id){
+							var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+							if(!d.getElementById(id)){
+								js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
+							fjs.parentNode.insertBefore(js,fjs);
+							}
+						}
+						(document,"script","twitter-wjs")
+					</script>
+				</div>;
 			</aside>
 		</main>
 
