--- a/sim.html
+++ b/sim.html
@@ -62,6 +62,7 @@
 				<div id="run">
 					<h3>evolve</h3>
 				</div>
+				<p>This page is under construction. The evolve button doesn't work yet. You can run the algorithm by page refresh and if you like to see best fit for every generation please open javascript console on your browser.</p>
 
 
 		</main>
