repo rename and other minor changes

--- a/code.html
+++ b/code.html
@@ -20,7 +20,7 @@
 					<li class="liFlex"><a href="sim.html">Simulator</a></li>
 				</ul></div>
 			<div class="imageBox">
-				<a href="https://goo.gl/YcqU94">
+				<a href="https://en.wikipedia.org/wiki/Weasel_program">
   				<img src="RoboHead.png" alt="Smiley face" height="110" width="130">
 				</a>
 			</div>
