--- a/code.html
+++ b/code.html
@@ -6,6 +6,7 @@
   		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   		<link rel="stylesheet" type="text/css" href="styles.css">
   		<link rel="shortcut icon" href="favicon.ico" >
+			<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
   		<script src="behavior.js"></script>
   		<title>GA</title>
  	</head>
@@ -48,6 +49,8 @@
 			</article>
 
 			<aside class = "sideBox">
+				<div class="github-card" data-github="siafahim" data-width="400" data-height="317" data-theme="medium">
+				</div>
 					<div id="disqus_thread">
 						<script>
 							(function() { // DON'T EDIT BELOW THIS LINE
