--- a/sim.html
+++ b/sim.html
@@ -62,7 +62,11 @@
 				<div id="run">
 					<h3>evolve</h3>
 				</div>
-				<p>This page is under construction. The evolve button doesn't work yet. You can run the algorithm by page refresh and if you like to see best fit for every generation please open javascript console on your browser.<br>Enjoy evolving ;)</p>
+				<p id="temp"><strong>*</strong><br>This page is under construction. The evolve button doesn't work yet.
+					You can run the algorithm by page refresh and if you like to the process of evolution
+					on random letters until it evolves to your input, then open the javascript console in
+					your browser by pressing <strong>alt + command/ control + i</strong>.
+					<br>Enjoy evolving ;)</p>
 
 
 		</main>
