--- a/code.html
+++ b/code.html
@@ -66,7 +66,7 @@
 						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 					</div>
 
-					<div id="tweetBox">
+					<!-- <div id="tweetBox">
 						<a class="twitter-timeline" href="https://twitter.com/SiaFahim" data-widget-id="664535240019349505">Tweets by @SiaFahim</a>
 						<script>
 							!function(d,s,id){
@@ -78,7 +78,7 @@
 							}
 							(document,"script","twitter-wjs")
 						</script>
-					</div>
+					</div> -->
 			</aside>
 		</main>
 
