--- a/code.html
+++ b/code.html
@@ -49,7 +49,7 @@
 			</article>
 
 			<aside class = "sideBox">
-				<div class="github-card" data-github="siafahim" data-width="400" data-height="317" data-theme="medium">
+				<div class="github-card" data-github="siafahim" data-theme="medium">
 					<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 				</div>
 
@@ -88,3 +88,4 @@
 	</script>
 
  </html>
+<!-- data-width="400" data-height="317" -->
