--- a/code.html
+++ b/code.html
@@ -49,9 +49,7 @@
 			</article>
 
 			<aside class = "sideBox">
-				<div class="github-card" data-github="siafahim" data-theme="medium">
-					<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-				</div>
+
 
 					<div id="disqus_thread">
 						<script>
@@ -66,6 +64,11 @@
 						</script>
 						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 					</div>
+
+					<div class="github-card" data-github="siafahim" data-width="90%" data-height="317" data-theme="medium">
+						<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+					</div>
+
 			</aside>
 		</main>
 
@@ -88,4 +91,3 @@
 	</script>
 
  </html>
-<!-- data-width="400" data-height="317" -->
