--- a/code.html
+++ b/code.html
@@ -65,7 +65,7 @@
 						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 					</div>
 
-					<div class="github-card" data-github="siafahim" data-width="95%" data-height="317" data-theme="medium">
+					<div id="gitBox" class="github-card" data-github="siafahim" data-width="98%" data-height="320" data-theme="medium">
 						<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 					</div>
 
