--- a/sim.html
+++ b/sim.html
@@ -32,7 +32,7 @@
 
 		<main class="sim">
 				<div id="simHead">
-					<h3>Sit tight! Some cool stuff is going to happen here :)</h3>
+					<h3>Keep calm and evolve!</h3>
 				</div>
 
 				<!-- <div id="msg">
@@ -62,7 +62,7 @@
 				<div id="run">
 					<h3>evolve</h3>
 				</div>
-				<p id="temp"><strong>*</strong><br>This page is under construction. The evolve button doesn't work yet.
+				<p id="temp">This page is under construction. The evolve button doesn't work yet.
 					You can run the algorithm by page refresh and if you like to the process of evolution
 					on random letters until it evolves to your input, then open the javascript console in
 					your browser by pressing <strong>alt + command/ control + i</strong>.
