--- a/code.html
+++ b/code.html
@@ -50,8 +50,7 @@
 
 			<aside class = "sideBox">
 
-
-					<div id="disqus_thread">
+					<!-- <div id="disqus_thread">
 						<script>
 							(function() { // DON'T EDIT BELOW THIS LINE
 							var d = document, s = d.createElement('script');
@@ -63,7 +62,7 @@
 							})();
 						</script>
 						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-					</div>
+					</div> -->
 
 					<div id="gitBox" class="github-card" data-github="siafahim" data-width="98%" data-height="320" data-theme="medium">
 						<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
