--- a/sim.html
+++ b/sim.html
@@ -54,7 +54,7 @@
 					</div>
 
 					<div id="costDiv">
-						<p>Cost value:</p> <p id="cost">infinity</p>
+						<p>Population:</p> <p id="cost">0</p>
 					</div>
 
 				</div>
@@ -63,7 +63,7 @@
 					<h3>evolve</h3>
 				</div>
 				<p id="temp">This page is under construction. The evolve button doesn't work yet.
-					You can run the algorithm by page refresh and if you like to the process of evolution
+					You can run the algorithm by page refresh and if you like to watch process of evolution
 					on random letters until it evolves to your input, then open the javascript console in
 					your browser by pressing <strong>alt + command/ control + i</strong>.
 					<br>Enjoy evolving ;)</p>
