--- a/sim.html
+++ b/sim.html
@@ -63,7 +63,7 @@
 					<h3>evolve</h3>
 				</div>
 				<p id="temp">This page is under construction. The evolve button doesn't work yet.
-					You can run the algorithm by page refresh or clicking on <strong>Simulation</strong>.
+					You can run the algorithm by page refresh or clicking on <strong>Simulator</strong>.
 					If you like to watch process of evolution on random letters until it evolves to your input,
 					then open the javascript console in your browser by pressing
 					<strong>alt + command/ control + i</strong>.
