--- a/index.html
+++ b/index.html
@@ -12,8 +12,27 @@
  	</head>
 
  	<body class= "bodyContainer" class="works_on_smartphone">
+ 		<div id="fb-root"></div>
+			<script>(function(d, s, id) {
+					  var js, fjs = d.getElementsByTagName(s)[0];
+					  if (d.getElementById(id)) return;
+					  js = d.createElement(s); js.id = id;
+					  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+					  fjs.parentNode.insertBefore(js, fjs);
+					}(document, 'script', 'facebook-jssdk'));
+			</script>
 		<header class = "headContainer">
-			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
+		<div class="right">
+			<!-- tweeter button -->
+			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm">Tweet</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+			</script>
+
+			<!-- facebook button -->
+
+			<div class="fb-share-button" data-href="http://173.246.107.7/index.html" data-layout="button"></div>
+		</div>
+			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>			
 			<div class="ulBox">
 				<ul>
 					<li class="liFlex"><a href="index.html">Home</a></li>
@@ -22,7 +41,8 @@
 				</ul></div>
 			<div class="imageBox">
 				<a href="https://en.wikipedia.org/wiki/Weasel_program">
-  				<img src="RoboHead.png" alt="Smiley face" height="110" width="130">
+  				<img src="RoboHead.png" alt="Smiley face" >
+					<!-- height="110" width="130" -->
 				</a>
 			</div>
 		</header>
