--- a/index.html
+++ b/index.html
@@ -29,22 +29,24 @@
 					<li class="liFlex"><a href="code.html">Code</a></li>
 					<li class="liFlex"><a href="sim.html">Simulator</a></li>
 				</ul></div>
+				
+			
 			<div class="imageBox">
 				<a href="https://en.wikipedia.org/wiki/Weasel_program">
-  				<img src="RoboHead.png" alt="Smiley face" >
+  				<img src="RoboHead.png" alt="Smiley face" height="110" width="130">
 					<!-- height="110" width="130" -->
 				</a>
 			</div>
 			<div class="right">
-			<!-- tweeter button -->
-			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm">Tweet</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-			</script>
+				<!-- tweeter button -->
+				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm">Tweet</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+				</script>
 
-			<!-- facebook button -->
+				<!-- facebook button -->
 
-			<div class="fb-share-button" data-href="http://173.246.107.7/index.html" data-layout="button"></div>
-		</div>
+				<div class="fb-share-button" data-href="http://173.246.107.7/index.html" data-layout="button"></div>
+			</div>
 		</header>
 
 		<main class="mainContainer">
