--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
  	</head>
 
  	<body class= "bodyContainer" class="works_on_smartphone">
- 		<div id="fb-root"></div>
-			<script>(function(d, s, id) {
+ 		<div id="fb-root"><script>(function(d, s, id) {
 					  var js, fjs = d.getElementsByTagName(s)[0];
 					  if (d.getElementById(id)) return;
 					  js = d.createElement(s); js.id = id;
 					  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-					  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));
-			</script>
+					  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script></div>	
 		<header class = "headContainer">
-		
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>			
 			<div class="ulBox">
 				<ul>
@@ -29,14 +26,11 @@
 					<li class="liFlex"><a href="code.html">Code</a></li>
 					<li class="liFlex"><a href="sim.html">Simulator</a></li>
 				</ul></div>
-				
-			
 			<div class="imageBox">
 				<a href="https://en.wikipedia.org/wiki/Weasel_program">
   				<img src="RoboHead.png" alt="Smiley face" height="110" width="130">
 					<!-- height="110" width="130" -->
-				</a>
-			</div>
+				</a></div>
 			<div class="right">
 				<!-- tweeter button -->
 				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm">Tweet</a>
@@ -45,8 +39,7 @@
 
 				<!-- facebook button -->
 
-				<div class="fb-share-button" data-href="http://173.246.107.7/index.html" data-layout="button"></div>
-			</div>
+				<div class="fb-share-button" data-href="http://173.246.107.7/index.html" data-layout="button"></div></div>
 		</header>
 
 		<main class="mainContainer">
