--- a/code.html
+++ b/code.html
@@ -12,6 +12,13 @@
  	</head>
 
  	<body class= "bodyContainer" class="works_on_smartphone">
+ 		<div id="fb-root"><script>(function(d, s, id) {
+					  var js, fjs = d.getElementsByTagName(s)[0];
+					  if (d.getElementById(id)) return;
+					  js = d.createElement(s); js.id = id;
+					  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+					  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script>
+		</div>	
 		<header class = "headContainer">
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
 			<div class="ulBox">
