--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 			<div class="imageBox">	
 
-				<div>
+				<div class="headImg">
 					<a href="https://en.wikipedia.org/wiki/Weasel_program" height="110" width="130"></a>
-					<img class="headImg" src="RoboHead.png" alt="Smiley face" height="110" width="130" >
+					<img src="RoboHead.png" alt="Smiley face" height="110" width="130" >
 				</div>
 
 				<div class="socialBox">
