fixing the arrangement of flexboxes in the header

--- a/sim.html
+++ b/sim.html
@@ -20,28 +20,30 @@
 					  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
 					  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script>
 		</div>	
+		
 		<header class = "headContainer">
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
-			<div class="ulBox">
-				<ul>
-					<li class="liFlex"><a href="index.html">Home</a></li>
-					<li class="liFlex"><a href="code.html">Code</a></li>
-					<li class="liFlex"><a href="sim.html">Simulator</a></li>
-				</ul></div>
-			<div class="imageBox">
-				<a href="https://en.wikipedia.org/wiki/Weasel_program">
-  				<img src="RoboHead.png" alt="Smiley face" height="110" width="130">
-				</a>
-			</div>
-			<div class="right">
-				<!-- tweeter button -->
-				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm">Tweet</a>
-				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-				</script>
+			<ul class="ulBox">
+				<li class="liFlex"><a href="index.html">Home</a></li>
+				<li class="liFlex"><a href="code.html">Code</a></li>
+				<li class="liFlex"><a href="sim.html">Simulator</a></li>
+			</ul>
+			<div class="imageBox">	
+				<div class="headImg">
+					<a href="https://en.wikipedia.org/wiki/Weasel_program" height="110" width="130"></a>
+					<img src="RoboHead.png" alt="Smiley face" height="110" width="130" >
+				</div>
+				<div class="socialBox">
+					<div class="tweet">
+						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm">Tweet</a>
 
-				<!-- facebook button -->
-
-				<div class="fb-share-button" data-href="http://173.246.107.7/index.html" data-layout="button"></div>
+						<script>!function(d,s,id){
+							var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+						</script>
+					</div>
+					<div class="fb-share-button" data-href="http://173.246.107.7/index.html" data-layout="button">
+					</div>
+				</div>	
 			</div>
 		</header>
 
