fixing the arrangement of flexboxes in the header

--- a/code.html
+++ b/code.html
@@ -29,8 +29,10 @@
 			</ul>
 			<div class="imageBox">	
 				<div class="headImg">
-					<a href="https://en.wikipedia.org/wiki/Weasel_program" height="110" width="130"></a>
-					<img src="RoboHead.png" alt="Smiley face" height="110" width="130" >
+					<a href="https://en.wikipedia.org/wiki/Weasel_program">
+						<img src="RoboHead.png" alt="Smiley face" height="70" width="90" >
+					</a>
+					
 				</div>
 				<div class="socialBox">
 					<div class="tweet">
