--- a/index.html
+++ b/index.html
@@ -23,22 +23,19 @@
 		</div>	
 
 		<header class = "headContainer">
-			
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
-
 			<ul class="ulBox">
 				<li class="liFlex"><a href="index.html">Home</a></li>
 				<li class="liFlex"><a href="code.html">Code</a></li>
 				<li class="liFlex"><a href="sim.html">Simulator</a></li>
 			</ul>
-
 			<div class="imageBox">	
-
 				<div class="headImg">
-					<a href="https://en.wikipedia.org/wiki/Weasel_program" height="110" width="130"></a>
-					<img src="RoboHead.png" alt="Smiley face" height="110" width="130" >
+					<a href="https://en.wikipedia.org/wiki/Weasel_program">
+						<img src="RoboHead.png" alt="Smiley face" height="70" width="90" >
+					</a>
+					
 				</div>
-
 				<div class="socialBox">
 					<div class="tweet">
 						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm">Tweet</a>
@@ -47,13 +44,10 @@
 							var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
 						</script>
 					</div>
-
 					<div class="fb-share-button" data-href="http://173.246.107.7/index.html" data-layout="button">
 					</div>
-				</div>
-				
+				</div>	
 			</div>
-
 		</header>
 
 		<main class="mainContainer">
