changing evolve button to link

--- a/sim.html
+++ b/sim.html
@@ -82,14 +82,15 @@
 				</div>
 
 				<div id="run">
-					<h3>evolve</h3>
+					<a href="sim.html">evolve</a>
 				</div>
-				<p id="temp">This page is under construction. The evolve button doesn't work yet.
-					You can run the algorithm by page refresh or clicking on <strong>Simulator</strong>.
-					If you like to watch process of evolution on random letters until it evolves to your input,
-					then open the javascript console in your browser by pressing
-					<strong>alt + command/ control + i</strong>.
-					<br>Enjoy evolving ;)</p>
+					
+				<p id="temp">This page is under construction. The evolve button only refreshes this page.
+				You can run the algorithm by page refresh or clicking on <strong>evolve</strong>.
+				If you like to watch process of evolution on random letters until it evolves to your input,
+				then open the javascript console in your browser by pressing
+				<strong>alt + command/ control + i</strong>.
+				<br>Enjoy evolving ;)</p>
 		</main>
 
 		<footer>
