changing evolve button to link

--- a/code.html
+++ b/code.html
@@ -23,9 +23,9 @@
 		<header class = "headContainer">
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
 			<ul class="ulBox">
-				<li class="liFlex"><a href="index.html">Home</a></li>
-				<li class="liFlex"><a href="code.html">Code</a></li>
-				<li class="liFlex"><a href="sim.html">Simulator</a></li>
+				<li class="liFlex"><a href="index.html">home</a></li>
+				<li class="liFlex"><a href="code.html">code</a></li>
+				<li class="liFlex"><a href="sim.html">simulator</a></li>
 			</ul>
 			<div class="imageBox">	
 				<div class="headImg">
@@ -40,7 +40,7 @@
 					</div>
 
 					<div class="tweet">
-						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm">Tweet</a>
+						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm"></a>
 
 						<script>!function(d,s,id){
 							var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
@@ -54,7 +54,7 @@
 		<main class="mainContainer">
 			<article class = "articleBox">
 				<header>
-					<h3 id="articleTitle">Genetic Algorithm in JavaScript</h3>
+					<h3 id="articleTitle">genetic algorithm in JavaScript</h3>
 				</header>
 
 				<div id="content">
@@ -97,8 +97,8 @@
 
 		<footer class = "footBox">
 			<p>
-		  			Made by <a href="https://twitter.com/SiaFahim" target="_blank">Siavash Fahimi</a> for
-		  			<a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.
+		  			made by <a href="https://twitter.com/SiaFahim" target="_blank">siavash fahimi</a> for
+		  			<a href="https://www.holbertonschool.com" target="_blank">holberton school</a>.
 		  			<img src="https://www.holbertonschool.com/holberton-logo.png" height="42" width="100">
 			</p>
 		</footer>
