--- a/sim.html
+++ b/sim.html
@@ -24,9 +24,9 @@
 		<header class = "headContainer">
 			<div class="titleBox"><h1>genetic<br>algorithm</h1></div>
 			<ul class="ulBox">
-				<li class="liFlex"><a href="index.html">Home</a></li>
-				<li class="liFlex"><a href="code.html">Code</a></li>
-				<li class="liFlex"><a href="sim.html">Simulator</a></li>
+				<li class="liFlex"><a href="index.html">home</a></li>
+				<li class="liFlex"><a href="code.html">code</a></li>
+				<li class="liFlex"><a href="sim.html">simulator</a></li>
 			</ul>
 			<div class="imageBox">	
 				<div class="headImg">
@@ -41,7 +41,7 @@
 					</div>
 
 					<div class="tweet">
-						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm">Tweet</a>
+						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://173.246.107.7/index.html" data-via="SiaFahim" data-count="none" data-hashtags="GeneticAlgorithm"></a>
 
 						<script>!function(d,s,id){
 							var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
@@ -53,8 +53,9 @@
 		</header>
 
 		<main class="sim">
+			<div id="box1">
 				<div id="simHead">
-					<h3>Keep calm and evolve!</h3>
+					<h3>keep calm and evolve!</h3>
 				</div>
 
 				<!-- <div id="msg">
@@ -72,31 +73,33 @@
 				<div id="genNumCost">
 
 					<div>
-						<p>Number of generations:</p><p id="numOfGen">0</p>
+						<p>number of generations:</p><p id="numOfGen">0</p>
 					</div>
 
 					<div id="costDiv">
-						<p>Population:</p> <p id="cost">0</p>
+						<p>population:</p> <p id="cost">0</p>
 					</div>
-
 				</div>
 
 				<div id="run">
 					<a href="sim.html">evolve</a>
 				</div>
 					
-				<p id="temp">This page is under construction. The evolve button only refreshes this page.
-				You can run the algorithm by page refresh or clicking on <strong>evolve</strong>.
-				If you like to watch process of evolution on random letters until it evolves to your input,
-				then open the javascript console in your browser by pressing
-				<strong>alt + command/ control + i</strong>.
-				<br>Enjoy evolving ;)</p>
+				<p id="temp">
+					This page is under construction. The evolve button only refreshes this page.
+					You can run the algorithm by page refresh or clicking on <strong>evolve</strong>.
+					If you like to watch process of evolution on random letters until it evolves to your input,
+					then open the javascript console in your browser by pressing
+					<strong>alt + command/ control + i</strong>.
+					<br>Enjoy evolving ;)
+				</p>
+			</div>
 		</main>
 
 		<footer>
 			<p>
-	  			Made by <a href="https://twitter.com/SiaFahim" target="_blank">Siavash Fahimi</a> for
-	  			<a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.
+	  			made by <a href="https://twitter.com/SiaFahim" target="_blank">siavash fahimi</a> for
+	  			<a href="https://www.holbertonschool.com" target="_blank">holberton school</a>.
 	  			<img src="https://www.holbertonschool.com/holberton-logo.png" height="42" width="100">
 			</p>
 		</footer>
